data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1824.wast
;; 5. **Test Description**: Generate a deeply nested block structure with branches targeting various levels, where a mid-level block's branch misresolves into an outer block.    - **Constraint**: Confirm branches resolve to the specified mid-level block.    - **Relation**: Validates nesting and label management across multi-level nested blocks.

(assert_invalid
  (module (func $test-deep-nest-branch-misresolve (result i32)
    (block (result i32)
      (block (result i32)
        (block (result i32)
          (br 2 (i32.const 42))
        )
      )
    )
  ))
  "type mismatch"
)